# serialization-comparator

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
cmake/: FindCatch2.cmake
common/: CMakeLists.txt
common/env/: helper.cpp  helper.hpp
common/protocol/: messages.cpp  messages.hpp
proxy/: CMakeLists.txt  Dockerfile  main.cpp
proxy/udp/: listener.cpp  listener.hpp
worker/: CMakeLists.txt  Dockerfile  main.cpp
worker/serialization/: base.hpp  json.hpp  msgpack.hpp  native.hpp  storage.hpp  xml.hpp  yaml.hpp
worker/serialization/avro/: avro.hpp  object.hh  object.json
worker/serialization/protocol-buffers/: object.pb.cc  object.pb.h  object.proto  protobuf.hpp
worker/udp-server/: base_listener.cpp  base_listener.hpp  multicast_listener.cpp  multicast_listener.hpp  unicast_listener.cpp  unicast_listener.hpp
